<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mousty.condorcet.be.gestion_score.be.mousty.intent.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/title_home_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_error" />

        <!-- Ajouter un score -->
        <Button
            android:text="@string/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_add_new_score"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!-- Afficher le top 10 d'un jeu  -->
        <Button
            android:text="@string/title_user_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_display_user_list"
            android:layout_below="@+id/btn_display_top_ten"
            android:layout_alignRight="@+id/btn_add_new_score"
            android:layout_alignEnd="@+id/btn_add_new_score"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!-- Afficher la liste des jeux gérés actuellement par l'application -->
        <Button
            android:text="@string/title_game_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_display_game_list"
            android:layout_below="@+id/btn_add_new_score"
            android:layout_alignRight="@+id/btn_add_new_score"
            android:layout_alignEnd="@+id/btn_add_new_score"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!-- Lister les utilisateurs -->
        <Button
            android:text="@string/title_top_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_display_top_ten"
            android:layout_below="@+id/btn_display_game_list"
            android:layout_alignRight="@+id/btn_display_user_list"
            android:layout_alignEnd="@+id/btn_display_user_list"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mojojojo4"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


</RelativeLayout>