<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mousty.condorcet.be.gestion_score.be.mousty.intent.DisplayGameListActivity"><![CDATA[




        android:layout_width="match_parent" android:layout_height="363dp"
        android:id="@+id/tableLayoutGame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/tv_error">





    ]]>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error"
        android:layout_above="@+id/btn_ret"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:id="@+id/tableLayout"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_totPages"
        android:layout_above="@+id/btn_next"
        android:layout_marginBottom="40dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="GAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="35px"/>

            <TextView
                android:text="@string/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="150px" />

            <TextView
                android:text="BTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="150px"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:id="@+id/tableLayoutGame"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </TableLayout>

    </TableLayout>

    <Button
        android:text="@string/btn_return"
        style="@style/buttonDefault"
        android:id="@+id/btn_ret"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_totPages"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Page : 1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_page"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tv_totPages"
        android:layout_toStartOf="@+id/tv_totPages" />

    <Button
        android:text="@string/btn_next"
        style="@style/buttonNextPrev"
        android:id="@+id/btn_next"
        android:layout_above="@+id/tv_error"
        android:layout_alignRight="@+id/tv_totPages"
        android:layout_alignEnd="@+id/tv_totPages" />

    <Button
        android:text="@string/btn_previous"
        style="@style/buttonNextPrev"
        android:id="@+id/btn_previous"
        android:layout_above="@+id/tv_error"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>